<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="5dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:id="@+id/mealPlannerCardView"
            android:contextClickable="true"
            android:focusable="true">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start|top"
                android:adjustViewBounds="true"
                android:contentDescription="@string/wedding_dinner_cont_desc"
                android:scaleType="fitStart"
                android:src="@mipmap/wedding_dinner" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/mealPlannerTextView"
                android:textColor="@color/colorWhite"
                android:textSize="24sp"
                android:background="@color/colorBlackGlass"
                android:paddingStart="10sp"
                android:paddingEnd="10sp"
                android:paddingTop="7sp"
                android:paddingBottom="7sp"/>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:id="@+id/venueFinderCardView"
            android:contextClickable="true"
            android:focusable="true">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start|top"
                android:adjustViewBounds="true"
                android:contentDescription="@string/wedding_venue_cont_desc"
                android:scaleType="fitStart"
                android:src="@mipmap/wedding_venue"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/venueFinderTextView"
                android:textColor="@color/colorWhite"
                android:textSize="24sp"
                android:background="@color/colorBlackGlass"
                android:paddingStart="10sp"
                android:paddingEnd="10sp"
                android:paddingTop="7sp"
                android:paddingBottom="7sp"/>

        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</ScrollView>